--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-color: #eaeaea !important;
+}
+
+.text-shadow {
+    color: #fafafa;
+    cursor: default;
+    font-size: 300%;
+    font-weight: lighter;
+    text-shadow: .01em .01em .4em #000;
+    transition: text-shadow 200ms cubic-bezier(0,0.3,0.5,0.8);
+}
+
+.text-shadow:hover {
+    text-shadow: .01em .01em .2em #000;
+}
+
+.bg-gradient {
+    background-image: linear-gradient(60deg, #3d3393 0%, #2b76b9 37%, #2cacd1 65%, #35eb93 100%);
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
