--- a/src/app/components/weather/weather.component.html
+++ b/src/app/components/weather/weather.component.html
@@ -1,7 +1,7 @@
 <section class="text-center card-deck" 
          *ngIf="!!weather">
 
-    <div class="card mt-1 cursor-pointer d-flex justify-content-center" 
+    <div class="card my-2 cursor-pointer d-flex justify-content-center" 
          [ngClass]="{ 
              'card-primary': weather.celsius < 20,   
              'bg-gradient': weather.celsius < 40,
@@ -15,9 +15,14 @@
     </div>
 
     <section *ngIf="weather.type" 
-             class="card card-primary weather"
+             class="card card-primary weather my-2"
              [ngClass]="{
-                'weather-cloud': weather.type === 'Clouds'
+                'weather-drizzle': weatherType === 'drizzle',
+                'weather-cloud': weatherType === 'clouds',
+                'weather-rain': weatherType === 'rain',
+                'weather-snow': weatherType === 'snow',
+                'weather-clear': weatherType === 'clear',
+                'weather-thunderstorm': weatherType === 'thunderstorm'
              }">
         <h3 class="text-shadow">
             {{ weather.type }}
