--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,9 @@ body {
     background-color: #eaeaea !important;
 }
 
+/*
+ * Adds a text-shadow to an element specifically the texts.
+ */
 .text-shadow {
     color: #fafafa;
     cursor: default;
@@ -16,10 +19,35 @@ body {
     text-shadow: .01em .01em .2em #000;
 }
 
+/*
+ * Adds a gradient to any element.
+ */
 .bg-gradient {
     background-image: linear-gradient(60deg, #3d3393 0%, #2b76b9 37%, #2cacd1 65%, #35eb93 100%);
 }
 
+/* 
+ * Changes the cursor to default when hovering to an element.
+ */
 .cursor-pointer {
     cursor: pointer;
+}
+
+/*
+ * Sets a sticky footer.
+ */
+html, body {
+  height: 100%;
+  margin: 0;
+}
+.wrapper {
+  min-height: 100%;
+
+  /* Equal to height of footer */
+  /* But also accounting for potential margin-bottom of last child */
+  margin-bottom: -50px;
+}
+.footer,
+.push {
+  height: 50px;
 }
